--- a/pytorch_1.ipynb
+++ b/pytorch_1.ipynb
@@ -35,7 +35,7 @@
         "outputId": "ef761708-0dd5-4ccd-dfc7-42744bc41a9e"
       },
       "id": "k2eJHW_jqaE7",
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -63,7 +63,7 @@
         "outputId": "704b2926-3399-4b31-bc25-a29529e525fe"
       },
       "id": "Z0NyjSmVqJQj",
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +119,7 @@
         "outputId": "0087329d-4624-49f0-8511-4eba67bb566f"
       },
       "id": "beWIt6sfrn4r",
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,7 +178,7 @@
         "outputId": "b70b3de1-8549-4126-9b46-bad9355a58d2"
       },
       "id": "g7_bM67UtZrP",
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,16 +212,40 @@
         "id": "3XFZ8hFBtiX_"
       },
       "id": "3XFZ8hFBtiX_",
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"hell\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qk3ZZWICt9Jv",
+        "outputId": "0560ab6d-ef05-4caf-c7d7-30b514287f82"
+      },
+      "id": "Qk3ZZWICt9Jv",
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hell\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Qk3ZZWICt9Jv"
+        "id": "eeSSPjZWwtV8"
       },
-      "id": "Qk3ZZWICt9Jv",
+      "id": "eeSSPjZWwtV8",
       "execution_count": null,
       "outputs": []
     }
