--- a/pytorch_2.ipynb
+++ b/pytorch_2.ipynb
@@ -9,6 +9,29 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Shaileshps21/pytorch-/blob/main/pytorch_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# AUTOGRADS\n",
+        "primarily used to train neural networks by efficiently calculating the gradients of a loss function with respect to the model's parameters.\n",
+        "\n",
+        "AIM- to calculate chain derivative efficiently.\n"
+      ],
+      "metadata": {
+        "id": "-mRlp0FMom5e"
+      },
+      "id": "-mRlp0FMom5e"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "id-AdXsToWyn"
+      },
+      "id": "id-AdXsToWyn",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
