--- a/pytorch_2.ipynb
+++ b/pytorch_2.ipynb
@@ -25,12 +25,178 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import torch"
+      ],
       "metadata": {
         "id": "id-AdXsToWyn"
       },
       "id": "id-AdXsToWyn",
-      "execution_count": null,
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# manual computation of gradients by creating a function\n",
+        "# EXAMPLE : y= x^2\n",
+        "\n",
+        "def dy_dx(x):\n",
+        "  return 2*x\n",
+        "\n",
+        "dy_dx(3)"
+      ],
+      "metadata": {
+        "id": "on3xgK7Y8JM4",
+        "outputId": "f9ae398f-19a4-46fd-aae3-83d0dacb8909",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "on3xgK7Y8JM4",
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Calculating gradient using pytorch autograds"
+      ],
+      "metadata": {
+        "id": "uuN8FrwJ8pdu"
+      },
+      "id": "uuN8FrwJ8pdu"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# EXAMPLE : y= x^2\n",
+        "\n",
+        "x = torch.tensor(3.0 , requires_grad=True) #requires_grad true is used to compute the gradient\n",
+        "\n",
+        "y = x**2\n",
+        "print(x)\n",
+        "print(y)"
+      ],
+      "metadata": {
+        "id": "sxc8FEdA6mK0",
+        "outputId": "6a4445b0-3917-4aa3-c99b-c613dbd0bb28",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "sxc8FEdA6mK0",
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor(3., requires_grad=True)\n",
+            "tensor(9., grad_fn=<PowBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y.backward()\n",
+        "\n",
+        "x.grad"
+      ],
+      "metadata": {
+        "id": "fgCpErXm60rt",
+        "outputId": "53a2814f-d429-40ea-cbd5-97d246b2fee4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "fgCpErXm60rt",
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(6.)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# EXAMPLE : y= x^2 , z = sin(y)\n",
+        "x = torch.tensor(3.0 , requires_grad=True)\n",
+        "y =x**2\n",
+        "z = torch.sin(y)\n",
+        "\n",
+        "print(x)\n",
+        "print(y)\n",
+        "print(z)\n",
+        "print()\n",
+        "\n",
+        "# y.backward()\n",
+        "# x.grad\n",
+        "\n",
+        "z.backward()\n",
+        "x.grad"
+      ],
+      "metadata": {
+        "id": "lsb6t6Hp8CHG",
+        "outputId": "7f35c734-f381-4167-fedf-bda0c6a488d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "lsb6t6Hp8CHG",
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor(3., requires_grad=True)\n",
+            "tensor(9., grad_fn=<PowBackward0>)\n",
+            "tensor(0.4121, grad_fn=<SinBackward0>)\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(-5.4668)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "bZSRMo4S99Ql"
+      },
+      "id": "bZSRMo4S99Ql",
+      "execution_count": 38,
       "outputs": []
     }
   ],
