--- a/pytorch_2.ipynb
+++ b/pytorch_2.ipynb
@@ -32,7 +32,7 @@
         "id": "id-AdXsToWyn"
       },
       "id": "id-AdXsToWyn",
-      "execution_count": 34,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -47,14 +47,14 @@
         "dy_dx(3)"
       ],
       "metadata": {
-        "id": "on3xgK7Y8JM4",
-        "outputId": "f9ae398f-19a4-46fd-aae3-83d0dacb8909",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "on3xgK7Y8JM4",
+        "outputId": "99a047bf-b34e-42ed-d84c-81cc0dcdc013"
       },
       "id": "on3xgK7Y8JM4",
-      "execution_count": 35,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -64,7 +64,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 66
         }
       ]
     },
@@ -90,14 +90,14 @@
         "print(y)"
       ],
       "metadata": {
-        "id": "sxc8FEdA6mK0",
-        "outputId": "6a4445b0-3917-4aa3-c99b-c613dbd0bb28",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sxc8FEdA6mK0",
+        "outputId": "4fe6a05d-67e4-4fb2-e786-57aabbfc790a"
       },
       "id": "sxc8FEdA6mK0",
-      "execution_count": 36,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,14 +117,14 @@
         "x.grad"
       ],
       "metadata": {
-        "id": "fgCpErXm60rt",
-        "outputId": "53a2814f-d429-40ea-cbd5-97d246b2fee4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fgCpErXm60rt",
+        "outputId": "320f6805-3962-4e61-b4b1-02da828936e9"
       },
       "id": "fgCpErXm60rt",
-      "execution_count": 37,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -134,7 +134,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 68
         }
       ]
     },
@@ -158,14 +158,14 @@
         "x.grad"
       ],
       "metadata": {
-        "id": "lsb6t6Hp8CHG",
-        "outputId": "7f35c734-f381-4167-fedf-bda0c6a488d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lsb6t6Hp8CHG",
+        "outputId": "88963537-a0eb-4f06-e169-1392b0ef835c"
       },
       "id": "lsb6t6Hp8CHG",
-      "execution_count": 45,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,7 +185,141 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "EXAMPLE : to compute the backpropogation grad in case of neural network"
+      ],
+      "metadata": {
+        "id": "rHyMgIidDPMA"
+      },
+      "id": "rHyMgIidDPMA"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# manual creation and gradient calculation\n",
+        "# Inputs\n",
+        "x = torch.tensor(6.7)  # Input feature\n",
+        "y = torch.tensor(0.0)  # True label (binary)\n",
+        "w = torch.tensor(1.0)  # Weight\n",
+        "b = torch.tensor(0.0)  # Bias\n",
+        "\n",
+        "print(x)\n",
+        "print(y)\n",
+        "print(w)\n",
+        "print(b)\n",
+        "\n",
+        "# Binary cross entropy loss for scaler\n",
+        "def binary_cross_entropy_loss(prediction, target):\n",
+        "    epsilon = 1e-8  # To prevent log(0)\n",
+        "    prediction = torch.clamp(prediction, epsilon, 1 - epsilon)\n",
+        "    return -(target * torch.log(prediction) + (1 - target) * torch.log(1 - prediction))\n",
+        "\n",
+        "# Forward pass\n",
+        "z = w * x + b  # Weighted sum (linear part)\n",
+        "y_pred = torch.sigmoid(z)  # Predicted probability\n",
+        "\n",
+        "# Compute binary cross-entropy loss\n",
+        "loss = binary_cross_entropy_loss(y_pred, y)\n",
+        "loss\n",
+        "\n",
+        "# Derivatives:\n",
+        "# 1. dL/d(y_pred): Loss with respect to the prediction (y_pred)\n",
+        "dloss_dy_pred = (y_pred - y)/(y_pred*(1-y_pred))\n",
+        "\n",
+        "# 2. dy_pred/dz: Prediction (y_pred) with respect to z (sigmoid derivative)\n",
+        "dy_pred_dz = y_pred * (1 - y_pred)\n",
+        "\n",
+        "# 3. dz/dw and dz/db: z with respect to w and b\n",
+        "dz_dw = x  # dz/dw = x\n",
+        "dz_db = 1  # dz/db = 1 (bias contributes directly to z)\n",
+        "\n",
+        "dL_dw = dloss_dy_pred * dy_pred_dz * dz_dw\n",
+        "dL_db = dloss_dy_pred * dy_pred_dz * dz_db\n",
+        "\n",
+        "print(f\"Manual Gradient of loss w.r.t weight (dw): {dL_dw}\")\n",
+        "print(f\"Manual Gradient of loss w.r.t bias (db): {dL_db}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bZSRMo4S99Ql",
+        "outputId": "c11a8b23-b850-4ada-86bd-f98e0fbad3b1"
+      },
+      "id": "bZSRMo4S99Ql",
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor(6.7000)\n",
+            "tensor(0.)\n",
+            "tensor(1.)\n",
+            "tensor(0.)\n",
+            "Manual Gradient of loss w.r.t weight (dw): 6.691762447357178\n",
+            "Manual Gradient of loss w.r.t bias (db): 0.998770534992218\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using autograd ---easy peasyy\n",
+        "# creation\n",
+        "x = torch.tensor(6.7)\n",
+        "y = torch.tensor(0.0)\n",
+        "w = torch.tensor(1.0 , requires_grad=True)\n",
+        "b = torch.tensor(0.0 , requires_grad=True)\n",
+        "print(x)\n",
+        "print(y)\n",
+        "print(w)\n",
+        "print(b)\n",
+        "\n",
+        "# forward pass\n",
+        "z= w*x + b\n",
+        "y_pred = torch.sigmoid(z)\n",
+        "print(y_pred)\n",
+        "\n",
+        "# loss calculation\n",
+        "loss = binary_cross_entropy_loss(y_pred, y)\n",
+        "print(loss)\n",
+        "\n",
+        "# backward pass and weight, bias updation\n",
+        "loss.backward()\n",
+        "print(w.grad)\n",
+        "print(b.grad)"
+      ],
+      "metadata": {
+        "id": "FwEQdM94DEhF",
+        "outputId": "b7d78fdf-195b-4872-d796-cc0651b5ad80",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "FwEQdM94DEhF",
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor(6.7000)\n",
+            "tensor(0.)\n",
+            "tensor(1., requires_grad=True)\n",
+            "tensor(0., requires_grad=True)\n",
+            "tensor(0.9988, grad_fn=<SigmoidBackward0>)\n",
+            "tensor(6.7012, grad_fn=<NegBackward0>)\n",
+            "tensor(6.6918)\n",
+            "tensor(0.9988)\n"
+          ]
         }
       ]
     },
@@ -193,10 +327,10 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "bZSRMo4S99Ql"
+        "id": "GhpJ9eKTJq2I"
       },
-      "id": "bZSRMo4S99Ql",
-      "execution_count": 38,
+      "id": "GhpJ9eKTJq2I",
+      "execution_count": null,
       "outputs": []
     }
   ],
