--- a/pytorch_4.ipynb
+++ b/pytorch_4.ipynb
@@ -11,6 +11,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# NN modules"
+      ],
+      "metadata": {
+        "id": "4Pus7jcNYikz"
+      },
+      "id": "4Pus7jcNYikz"
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
