--- a/pytorch_4.ipynb
+++ b/pytorch_4.ipynb
@@ -13,7 +13,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# NN modules"
+        "# NN modules\n",
+        "\n",
+        "Plan of Action\n",
+        "1. Improvements\n",
+        "2. The nn module\n",
+        "3. The torch.optim module\n",
+        "\n",
+        "Improvements\n",
+        "1. Building the neural network using nn module\n",
+        "2. Using built-in activation function\n",
+        "3. Using built-in loss function\n",
+        "4. Using built-in optimizer\n"
       ],
       "metadata": {
         "id": "4Pus7jcNYikz"
@@ -24,9 +35,315 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "LdK8SHfcYUba"
+        "id": "R9mDaXCpuGPj"
       },
-      "id": "LdK8SHfcYUba",
+      "id": "R9mDaXCpuGPj",
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Create a basic model using nn modules"
+      ],
+      "metadata": {
+        "id": "F_5cAROtt-xA"
+      },
+      "id": "F_5cAROtt-xA"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# create model class\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "!pip install torchinfo\n",
+        "from torchinfo import summary"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LCl9Q5U7aDBL",
+        "outputId": "d34246c4-4110-40b0-8882-7aff5bd7ddec"
+      },
+      "id": "LCl9Q5U7aDBL",
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: torchinfo in /usr/local/lib/python3.12/dist-packages (1.8.0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Model(nn.Module):\n",
+        "  def __init__(self , num_features):\n",
+        "    super().__init__()\n",
+        "    self.linear = nn.Linear(num_features, 1)\n",
+        "    self.sigmoid= nn.Sigmoid()\n",
+        "\n",
+        "  def forward(self, features): # Renamed from forward_pass to forward\n",
+        "    output = self.linear(features) #it is same as y=wx+b\n",
+        "    output = self.sigmoid(output)\n",
+        "    return output"
+      ],
+      "metadata": {
+        "id": "ITD18dVanfo1"
+      },
+      "id": "ITD18dVanfo1",
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# create dataset\n",
+        "features = torch.rand(10,5)\n",
+        "features\n",
+        "\n",
+        "model = Model(features.shape[1])\n",
+        "model(features) # Changed to call the model instance directly"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UwZlHAxxq1Y7",
+        "outputId": "aa5bae3b-86a8-44ca-ec5f-da6f480cd0c9"
+      },
+      "id": "UwZlHAxxq1Y7",
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.4558],\n",
+              "        [0.4397],\n",
+              "        [0.4505],\n",
+              "        [0.5396],\n",
+              "        [0.4486],\n",
+              "        [0.4601],\n",
+              "        [0.4989],\n",
+              "        [0.4451],\n",
+              "        [0.4740],\n",
+              "        [0.4656]], grad_fn=<SigmoidBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(model.linear.bias)\n",
+        "print(model.linear.weight)\n",
+        "print()\n",
+        "\n",
+        "summary(model, input_size=(10,5))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sRn2suQrtik4",
+        "outputId": "cb9eee34-a808-4b88-dd30-70c2ecd0587b"
+      },
+      "id": "sRn2suQrtik4",
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Parameter containing:\n",
+            "tensor([-0.3212], requires_grad=True)\n",
+            "Parameter containing:\n",
+            "tensor([[ 0.3020, -0.0627, -0.1576,  0.1799,  0.0858]], requires_grad=True)\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "==========================================================================================\n",
+              "Layer (type:depth-idx)                   Output Shape              Param #\n",
+              "==========================================================================================\n",
+              "Model                                    [10, 1]                   --\n",
+              "├─Linear: 1-1                            [10, 1]                   6\n",
+              "├─Sigmoid: 1-2                           [10, 1]                   --\n",
+              "==========================================================================================\n",
+              "Total params: 6\n",
+              "Trainable params: 6\n",
+              "Non-trainable params: 0\n",
+              "Total mult-adds (Units.MEGABYTES): 0.00\n",
+              "==========================================================================================\n",
+              "Input size (MB): 0.00\n",
+              "Forward/backward pass size (MB): 0.00\n",
+              "Params size (MB): 0.00\n",
+              "Estimated Total Size (MB): 0.00\n",
+              "=========================================================================================="
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xuNZKqjswH3Z"
+      },
+      "id": "xuNZKqjswH3Z",
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "now, we will create a new neural network with the hidden weights"
+      ],
+      "metadata": {
+        "id": "aL1QpVdcwIbC"
+      },
+      "id": "aL1QpVdcwIbC"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Model(nn.Module):\n",
+        "\n",
+        "  def __init__(self, num_features):\n",
+        "    super().__init__()\n",
+        "    self.linear1 = nn.Linear(num_features, 3)\n",
+        "    self.relu    = nn.ReLU()\n",
+        "    self.linear2 = nn.Linear(3, 1) # Corrected: input to linear2 is 3 features\n",
+        "    self.sigmoid = nn.Sigmoid()\n",
+        "\n",
+        "  def forward(self, features):\n",
+        "    out = self.linear1(features) # Output is (batch_size, 3)\n",
+        "    out = self.relu(out)         # Pass output from linear1 to relu\n",
+        "    out = self.linear2(out)      # Pass output from relu to linear2\n",
+        "    out = self.sigmoid(out)      # Pass output from linear2 to sigmoid\n",
+        "    return out"
+      ],
+      "metadata": {
+        "id": "Yumq1GYsu8Ge"
+      },
+      "id": "Yumq1GYsu8Ge",
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# create dataset\n",
+        "features = torch.rand(10,5)\n",
+        "features\n",
+        "\n",
+        "model = Model(features.shape[1])\n",
+        "model(features) # Changed to call the model instance directly\n",
+        "\n",
+        "# model parameters\n",
+        "print(model.linear1.bias)\n",
+        "print(model.linear1.weight)\n",
+        "print()\n",
+        "\n",
+        "print(model.linear2.bias)\n",
+        "print(model.linear2.weight)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H5NXYXeNxbQj",
+        "outputId": "52f53de9-6c32-43e9-959b-ebab567bf4e8"
+      },
+      "id": "H5NXYXeNxbQj",
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Parameter containing:\n",
+            "tensor([ 0.3351, -0.1870,  0.1013], requires_grad=True)\n",
+            "Parameter containing:\n",
+            "tensor([[-0.4181, -0.0809, -0.0542, -0.2685, -0.2258],\n",
+            "        [-0.0565, -0.1074,  0.3234,  0.1304, -0.3313],\n",
+            "        [-0.0700, -0.1804, -0.0579, -0.1979, -0.1706]], requires_grad=True)\n",
+            "\n",
+            "Parameter containing:\n",
+            "tensor([0.5289], requires_grad=True)\n",
+            "Parameter containing:\n",
+            "tensor([[ 0.4288, -0.3657,  0.1592]], requires_grad=True)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Nhl_SAlO0TVP"
+      },
+      "id": "Nhl_SAlO0TVP",
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "lets use, sequential containers"
+      ],
+      "metadata": {
+        "id": "TaawGlKL0aC2"
+      },
+      "id": "TaawGlKL0aC2"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Model(nn.Module):\n",
+        "\n",
+        "  def __init__(self, num_features):\n",
+        "    super().__init__()\n",
+        "    self.network = nn.Sequential(\n",
+        "      nn.Linear(num_features, 3),\n",
+        "      nn.ReLU(),\n",
+        "      nn.Linear(3, 1),\n",
+        "      nn.Sigmoid()\n",
+        "    )\n",
+        "\n",
+        "  def forward(self, features):\n",
+        "    out = self.network(features)\n",
+        "    return out"
+      ],
+      "metadata": {
+        "id": "GcHMRGG20hL4"
+      },
+      "id": "GcHMRGG20hL4",
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "XRQlRzRFaLvZ"
+      },
+      "id": "XRQlRzRFaLvZ",
       "execution_count": null,
       "outputs": []
     }
